--- a/src/PortfolioContainer/Home/Profile.css
+++ b/src/PortfolioContainer/Home/Profile.css
@@ -16,7 +16,7 @@
 
 .profile-details-name {
   font-size: 24px;
-  font-family: "Poppins SemiBold";
+  font-family: 'Poppins SemiBold';
 }
 
 .profile-details-role {
@@ -25,10 +25,9 @@
   margin: 14px 0 24px 0;
 }
 
-.profile-details-role  h1 {
+.profile-details-role h1 {
   font-size: 40px;
   font-family: cursive;
-
 }
 
 .primary-text {
@@ -39,13 +38,39 @@
   color: var(--dark-orange);
 }
 
-.profile-role-tagline{
+.profile-role-tagline {
   font-size: 19px;
   margin: 5px 0 0 0;
-  font-family: "Poppins Light";
+  font-family: 'Poppins Light';
 }
 
 .profile-options .highlighted-btn {
-  margin: 0 0 0 2;
+  margin: 0 0 0 28px;
+}
+
+.profile-options .highlighted-btn:hover {
+  margin: 0 0 0 28px;
+  background-color: cornsilk;
+  color: black;
+}
+
+
+.profile-picture {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 1px 0px 0px var(--white);
+  border-radius: 50%;
+  height: 380px;
+  width: 380px;
+  margin: 0 0px 0 100px;
+}
+
+.profile-picture-background {
+  height: 95%;
+  width: 95%;
+  background-image: url(../../assets/Home/profile-photo.png);
+  background-size: cover;
+  border-radius: 50%;
 
 }
