--- a/src/PortfolioContainer/Home/Profile.css
+++ b/src/PortfolioContainer/Home/Profile.css
@@ -27,7 +27,7 @@
 
 .profile-details-role h1 {
   font-size: 40px;
-  font-family: cursive;
+
 }
 
 .primary-text {
@@ -35,7 +35,7 @@
 }
 
 .highlighted-text {
-  color: var(--dark-orange);
+  color: var(--neon-blue);
 }
 
 .profile-role-tagline {
@@ -46,13 +46,17 @@
 
 .profile-options .highlighted-btn {
   margin: 0 0 0 28px;
+  background-color: var(--neon-blue);
+  color: black;
 }
 
 .profile-options .highlighted-btn:hover {
   margin: 0 0 0 28px;
-  background-color: cornsilk;
+  background-color: white;
   color: black;
 }
+
+
 
 
 .profile-picture {
