mobile responsiveness header

--- a/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/src/PortfolioContainer/Home/Profile/Profile.css
@@ -73,7 +73,7 @@
 .profile-picture-background {
   height: 95%;
   width: 95%;
-  background-image: url(../../assets/Home/DFBF446C-C13C-4355-BB19-906D0CCFBF8A.JPG);
+  background-image: url(../../../assets/Home/DFBF446C-C13C-4355-BB19-906D0CCFBF8A.JPG);
   background-size: cover;
   border-radius: 50%;
   background-repeat: no-repeat;
