--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   --header-hamburger-background : rgba(11, 190, 173,0.8);
   --orange: #F57F17;
   --neon-blue: #00ffd5;
+  --my-black: #1b1b1b;
   --dark-orange: #FF5823;
   --orange-shadow: rgba(245, 127, 23,0.2);
   --white: #ffffff;
