--- a/src/utilities/ScreenHeading/ScreenHeading.css
+++ b/src/utilities/ScreenHeading/ScreenHeading.css
@@ -5,19 +5,17 @@
   width: 100%;
   margin: 0 0 50px 0;
 }
-
-.screen-sub-heading{
+.screen-sub-heading {
   letter-spacing: 3px;
-  margin: 8px 0 18px 0;
+  margin: 8px 0 10px 0;
   font-size: 12px;
   color: var(--my-black);
 }
-.screen-heading{
+.screen-heading {
   font-size: 32px;
-  color: var(--my-black);
+  color: #1f2235;
   font-family: "Poppins Bold";
 }
-
 .heading-seperator {
   display: flex;
   align-items: center;
@@ -25,14 +23,12 @@
   width: 180px;
   margin: 10px 0 0 0;
 }
-
-.serperator-line{
+.seperator-line {
   width: 100%;
   height: 2px;
-  background-color: var(--my-black);
+  background-color: #1f221f;
 }
-
-.serperator-blob{
+.seperator-blob {
   height: 10px;
   width: 100%;
   position: absolute;
@@ -40,8 +36,7 @@
   justify-content: center;
 }
 
-
-.serperator-blob div{
+.seperator-blob div {
   width: 35px;
   border-radius: 10px;
   background-color: var(--neon-blue);
