--- a/src/PortfolioContainer/Home/Header/Header.css
+++ b/src/PortfolioContainer/Home/Header/Header.css
@@ -71,7 +71,7 @@
     top: 0px;
     height: 100vh;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: #1b1b1b;
     z-index: 1000; 
     opacity: 0.8;
